# NightCoder

./: Dockerfile  README.md  README.ru.md  docker-compose.yaml  pyproject.toml
django_forum/core/: SOLID.md  base.py  calculators.py  mixins.py  repositories.py  services.py  tests.py
django_forum/django_forum/: settings.py
django_forum/forum/: views.py
django_forum/reviews/: views.py
django_forum/templates/forum/: question_detail.html  question_list.html
django_forum/templates/home/: home.html
django_forum/templates/reviews/: review_detail.html  review_list.html
django_forum/templates/users/: public_profile.html
django_forum/users/: views.py
django_forum/votes/: tests.py  views.py
